Revert "fix(demo): proper card shadow in dark mode"
This reverts commit cfbc23f9410547aefbeba8f68682db155a43b047.

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -50,9 +50,8 @@
   }
 
   .app-card {
-    @apply rounded app-bg-100 app-text-secondary 
-    shadow hover:shadow-2xl dark:shadow-black 
-    relative hover:z-10
+    @apply rounded app-bg-100 app-text-secondary
+    shadow hover:shadow-lg dark:shadow-gray-500
   }
 }
 
